2018-01-08  Karl Berry  <karl@freefriends.org>

	Import poppler-0.62.0.
	* Makefile.am, configure.ac, version.ac: Adjust.

2017-02-17  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import poppler-0.52.0.
	* version.ac: Adjust.

2017-01-15  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import poppler-0.51.0.
	* version.ac: Adjust.

2016-12-16  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import poppler-0.50.0.
	* version.ac: Adjust.

2016-11-15  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import poppler-0.49.0.
	* version.ac: Adjust.

2016-10-08  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import poppler-0.48.0.
	* version.ac: Adjust.

2016-08-19  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import poppler-0.47.0.
	* version.ac: Adjust.

2016-07-25  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import poppler-0.46.0.
	* version.ac: Adjust.

2016-06-18  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import poppler-0.45.0.
	* version.ac, configure.ac, config.h.in, Makefile.am: Adjust.

2016-05-22  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import poppler-0.44.0.
	* version.ac: Adjust.

2016-04-29  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import poppler-0.43.0.
	* version.ac: Adjust.

2016-03-18  Luigi Scarso  <luigi.scarso@gmail.com>

	Import poppler-0.42.0.
	* version.ac: Adjust.

2016-02-17  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import poppler-0.41.0.
	* version.ac: Adjust.

2016-02-15  Karl Berry  <karl@tug.org>

	* poppler-PATCHES: rename from poppler-src-PATCHES.
	* Makefile.am (EXTRA_DIST): likewise.

2016-01-14  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import poppler-0.40.0.
	* version.ac: Adjust.

2015-12-28  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import poppler-0.39.0.
	* version.ac: Adjust.

2015-10-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Import poppler-0.37.0.
	* version.ac: Adjust.

2015-09-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Import poppler-0.36.0.
	* version.ac: Adjust.

2015-08-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Import poppler-0.35.0.